Add IntegrationTest